@startuml
Screening "many" --> "1" Movie
Reservation "many" --> "1" Screening
Movie "1" --> "many" AbsDiscountCondition
PeriodCondition "many" ..|> "1" AbsDiscountCondition
SequenceCondition "many" ..|> "1" AbsDiscountCondition


class Screening{
    Movie Movie
    int squence
    datetime when_screened
    +Reservation reserve()
    -Money calculate_fee()
    +datetime get_when_screened()
    +int get_sequence()
}

Class Movie{
    string title
    int fee
    string discount_conditions
    MovieType movie_type

    +Money calculate_movie_fee()
    -bool is_discountable()
    -Money calculate_discount_amount()
    -Money calculate_amount_discount_amount()
    -Money calculate_percent_discount_amount()
    -Money calculate_none_discount_amount()
}

class PeriodCondition{
    DAY_OF_WEEK day_of_week
    date start_time
    date end_time

    +bool is_satisfiedBy()
}

class SequenceCondition{
    int sequence

    +bool is_satisfiedBy()
}

class AbsDiscountCondition{
    {abstract} +bool is_satisfiedBy()
}

class Reservation{
    Screening screening
    Customer customer
    Money total_fee
    int audience_count

}

class Customer{
    string names
    int id
}

enum MovieType{
    AMOUNT_DISCOUNT
    PERCENT_DISCOUNT
    NONE_DISCOUNT
}

enum DiscountConditionType{
    SEQUENCE_DISCOUNT
    PERIOD_DISCOUNT
    NONE_DISCOUNT
}

enum Constants{
    DAY_OF_WEEK
}
@enduml